- Ensure extras panel is not behind the main layer menu

--- a/examples/webgl-timemachine/index.css
+++ b/examples/webgl-timemachine/index.css
@@ -239,7 +239,7 @@ html, body {
 .ui-selectmenu-menu {
   border-bottom-right-radius: 2px;
   border-bottom-left-radius: 2px;
-  z-index: 9001;
+  z-index: 10000;
   height: 100%;
   overflow-y: auto;
 }
